--- a/Diodenlaser/lit.bib
+++ b/Diodenlaser/lit.bib
@@ -3,3 +3,27 @@ title = {Versuchsanleitung zu Versuch V60},
 year = {2022},
 organization = {Fakultät Phyik, TU Dortmund},
 }
+@book{Semiconductor_Optics,
+author={Klingshirn,Klaus},
+title={Semiconductor Optics},
+publisher={Springer Berlin, Heidelberg},
+year={2007},
+doi={https://doi.org/10.1007/978-3-540-38347-5},
+}
+@book{Atoms,
+author={Demtröder,Wolfgang},
+title={Atoms, Molecules and Photons},
+publisher={Springer Berlin, Heidelberg},
+year={2018},
+doi={https://doi.org/10.1007/978-3-662-55523-1},
+}
+@article{teachspin,
+title={Diode Laser Spectroscopy},
+organization={Fakultät Physik, TU Dortmund},
+}
+@manual{ulm,
+title={Laserspektroskopie der Rubidium D2-Linie},
+author={Krükow, Artjom},
+url={http://wwwex.physik.uni-ulm.de/lehre/fortgeschrittenenpraktikum/fp/Laserspektroskopie.pdf},
+organization={Universität Ulm},
+}
