--- a/Diodenlaser/lit.bib
+++ b/Diodenlaser/lit.bib
@@ -24,6 +24,7 @@ organization={Fakultät Physik, TU Dortmund},
 @manual{ulm,
 title={Laserspektroskopie der Rubidium D2-Linie},
 author={Krükow, Artjom},
+year={2012},
 url={http://wwwex.physik.uni-ulm.de/lehre/fortgeschrittenenpraktikum/fp/Laserspektroskopie.pdf},
 organization={Universität Ulm},
 }
