--- a/Myonen/lit.bib
+++ b/Myonen/lit.bib
@@ -3,3 +3,13 @@ title = {Versuchsanleitung zu Versuch V01: "V01 Lifetime of cosmic muons"},
 year = {2023},
 organization = {Fakultät Physik, TU Dortmund},
 }
+@article{pdglive,
+    author = "Workman, R. L. and others",
+    collaboration = "Particle Data Group",
+    title = "{Review of Particle Physics}",
+    doi = "10.1093/ptep/ptac097",
+    journal = "PTEP",
+    volume = "2022",
+    pages = "083C01",
+    year = "2022"
+}
