--- a/Myonen/content/auswertung.tex
+++ b/Myonen/content/auswertung.tex
@@ -4,13 +4,13 @@
 Die gesmate Messdauer der Hauptmessung Betrug $T=\SI{257100}{\second}$. In dieser Zeit wurden $N_{Start}=3857582$ und $N_{Stop}=738$ Stopsignale gemessen. Dies ergibt eine Eventrate von $f=\frac{N_{Start}}{T}=\SI{15,004\pm0,008}{\hertz}$
 \subsection{Wahl der Verzögerungszeit}
 Die für zwei unterschiedliche Pulsbreiten wurde die Zählrate in Abhängigkeit von der Verzögerungszeit zwischen beiden Komponenten der Koinzidenzschaltung gemessen. Die Messdauer pro Verzögerungszeit Betrug dabei $T_{mess}=5s$. 
-\begin{tabular}
+\begin{table}
 \centering
 \caption{Tabelle der Messdaten für die Zählrate in Abhängigkeit von der Verzögerungszeit für eine Pulsbreite von $\SI{18}{\nano\second}$}
 \label{tab:18ns}
 \begin{tblr}{colspec={c c}}
 \toprule
-dt[ns] & N \\
+$dt[ns]$ & $N$ \\
 \midrule
 -26 & 0 \\
 -25 & 2 \\
@@ -57,13 +57,13 @@ Die Unsicherheiten können aufgrund der zugrundeliegenden Poissonverteilung aus 
 \label{fig:10ns}
 \end{figure}
 Die resultierenden Ergebnisse sind in den Abbildungen $\ref{fig:18ns}$ und $\ref{fig:10ns}$ dargestellt. 
-\begin{tabular}
+\begin{table}
 \centering
 \caption{Tabelle der Messdaten für die Zählrate in Abhängigkeit von der Verzögerungszeit für eine Pulsbreite von $\SI{10}{\nano\second}$}
 \label{tab:10ns}
 \begin{tblr}{colspec={c c}}
 \toprule
-dt[ns] & N \\
+$dt[ns]$ & $N$ \\
 \midrule
 -26 & 2 \\
 -25 & 1 \\
@@ -116,13 +116,13 @@ Daraus lässt sich jeweils die Auflösungszeit $\Delta t$ bestimmen:
 Für die Hauptmessung wurde die Pulsbreite $\SI{10}{\nano\second}$ verwendet. Aufgrund der Platzierung des Plateaus wurde hier im folgenden eine Verzögerungszeit von $dt=\SI{2}{\nano\second}$ 
 \subsection{Kalibrierung der Kanalzeit}
 Um die Kanäle des MCA für die Messung sinnvoll in eine Zerfallsdauer übersetzen zu können wird mit einem Doppelpusgenerator ein Signal mit einer Festgelegten Zeit eingespeist und die betroffenen Kanäle des Analyzers werden gemessen. 
-\begin{tabular}
+\begin{table}
 \centering
 \caption{Messdaten für die Kalibrierung des MCA}
 \label{tab:MCA}
 \begin{tblr}{colspec={c c}}
 \toprule
-t[\mu s] & Kanal
+$t[\mu s]$ & $Kanal$
 \midrule
 0,5 & 4 \\
 1 & 15 \\
